2004-10-30  Bryce Harrington <bryce@bryceharrington.org>

	* src/dialogs/item-properties.cpp, src/sp-object.h:  Cleaning up
	stubs, disabling some more of the desc code to prevent crash.	  

2004-10-30  Kees Cook  <kees@outflux.net>

	* src/sp-metadata.cpp, src/sp-metadata.h, src/Makefile_insert,
	src/document.cpp, src/sp-object-repr.cpp, src/sp-object.cpp:
	I've created my very first SPObject!  SPMetadata is alive!  No
	more nasty hack to have it disappear from SVG Plain.  Mental
	won't have to take away my CVS access any more!  :)
	* inkscape2.nsi: update from Adib Taraben

2004-10-30  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/libnr/nr-matrix.cpp (nr_matrix_invert):
	  Fix for last commit to this file, which broke src==dest case.
	* src/libnr/nr-matrix-test.cpp: Add test cases for nr_matrix_invert.

2004-10-30  MenTaLguY  <mental@rydia.net>

	* src/widgets/layer-selector.cpp, src/widgets/layer-selector.h:
	  update when layers added/removed/reordered.

	* src/verbs.h, src/verbs.cpp: added "rename layer" verb.

2004-10-29  Kees Cook  <kees@outflux.net>

	* src/Makefile_insert, src/trace/Makefile_insert,
	src/util/Makefile_insert: distcheck cleanups.

2004-10-29  MenTaLguY  <mental@rydia.net>

	* src/widgets/layer-selector.cpp: default labels in italic

	* src/sp-object.h, src/sp-object.cpp: inkscape:label fixes

	* src/layer-fns.cpp: make ordering of layers complete; not just among
	                     siblings

	* src/util/list.h: documentation update

2004-10-29  Bryce Harrington <bryce@bryceharrington.org>

	* layer-fns.cpp:  documenting
	* layer-selector.cpp:  documenting & fixing funky widget resizing
	* object-ui.cpp, dialogs/item-properties.cpp, sp-object.h,
	  sp-object.cpp, widgets/layer-selector.cpp: add ability to set
	  inkscape:label from "Item Properties", remove id setting from
	  "Item Properties", switch to using
	  SPObject::label()/SPObject?::defaultLabel() in UI where object